Angular use GET and POST in single page

--- a/GET_POST.cshtml
+++ b/GET_POST.cshtml
@@ -11,10 +11,17 @@
             alert('Error');
         });
         //For Create a new student (HTTP POST)
+        /* 
         $scope.addStudent = function (aStudent) {
-            $http.post("/Student/Create", { aStudent }).error(function (responseData) {
+           $http.post("/Student/Create", { aStudent }).error(function (responseData) {
+               console.log("Error !" + responseData);
+           });
+        };*/
+        $scope.addStudent = function (aStudent) {
+            $http.post("/Student/Create", { aStudent }),(function (responseData) {
                 console.log("Error !" + responseData);
             });
+          
         };
 
     });
