validation and chk bx in angular

--- a/ng-validation form.cshtml
+++ b/ng-validation form.cshtml
@@ -1,5 +1,5 @@
 
-
+/* ng-validation form and checkbox click true then submit enabled*/
 
 <form class="form-group" name="frmUser">
             <input type="checkbox" ng-model="chkReset" />
